<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity"
    android:background="@mipmap/city_background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        android:orientation="vertical"
        android:weightSum="5"
        android:background="@color/lightblue">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="@dimen/padding"
            android:gravity="center"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/etPasswordEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="@dimen/fontsize"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorHighlight="@color/white"
                    android:hint="Please enter your Email"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnPasswordReset"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Reset Password"
                android:textSize="@dimen/heading"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/ic_reset"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>