<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/city_background"

    tools:context="com.alphatech.www.nfcbusinesscardlocal.LogIn"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        android:orientation="vertical"
        android:background="@color/lightblue">
        <!--Log in start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginemailbanner"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                />
            <EditText
                android:id="@+id/emaillogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginemail"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/loginpasswordbanner"
                android:textStyle="bold"
                android:textSize="@dimen/heading"
                />
            <EditText
                android:id="@+id/passwordlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/loginpassword"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/slabButtons"
                android:background="@color/transparent"
                android:drawableRight="@drawable/ic_sign_out"
                android:padding="@dimen/lesspadding"
                android:onClick="openMainMenu"
                android:text="@string/enter"
                android:textColor="@color/white"
                android:textSize="@dimen/heading" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding"
            android:background="@drawable/business_card">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="openRegistration"
                android:text="@string/register"
                android:textColor="@color/navy"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold" />
          <!--  <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="openImportCard"
                android:text="Register Using Physical Business Card"
                android:textColor="@color/navy"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold" /> -->
        </LinearLayout>
        <!--Log in end-->
    </LinearLayout>
</LinearLayout>
