...
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/ic_send"
                android:onClick="openSendCard"
                android:padding="@dimen/minpadding"
                android:text="@string/sendcard"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize"
                android:textStyle="bold" />
            <Button
...
